demo1/src/objects/Session_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Session Registrations</relationshipLabel>
        <relationshipName>Session_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Events__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Public Event Name</label>
        <referenceTo>Public_Event__c</referenceTo>
        <relationshipLabel>Session Registrations</relationshipLabel>
        <relationshipName>Session_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Room_Name__c</fullName>
        <formula>Session_Name__r.Room_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Room Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date_Time__c</fullName>
        <formula>Session_Name__r.Session_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <label>Session Name</label>
        <referenceTo>Sessions__c</referenceTo>
        <relationshipLabel>Session Registrations</relationshipLabel>
        <relationshipName>Session_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Session Registration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>